# Pattern

ch1/strategy/: CMakeLists.txt
ch1/strategy/src/: behavior.h  duck.h  hunter.h  main.cpp
ch10/state/: CMakeLists.txt
ch10/state/src/: context.cpp  context.h  main.cpp  state.cpp  state.h
ch2/observer/: CMakeLists.txt
ch2/observer/src/: display.h  main.cpp  observer.h  subject.h  weather_data.h
ch3/decorator/src/: component.h  decorator.h  main.cpp
